force-app/main/default/objects/Session_Obj__c/Session_Obj__c.object-meta.xml
<CustomObject>
    <label>Session-Obj</label>
    <nameField>
        <displayFormat>SO-{00000}</displayFormat>
        <label>Session-Obj ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Session Objectives</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>