force-app/main/default/objects/Session_Obj__c/fields/Comment__c.field-meta.xml
<CustomField>
    <fullName>Comment__c</fullName>
    <inlineHelpText>Short Comment on Trial Objective</inlineHelpText>
    <label>Comment</label>
    <length>200</length>
    <type>Text</type>
</CustomField>