force-app/main/default/objects/Session_Obj__c/fields/Correct__c.field-meta.xml
<CustomField>
    <fullName>Correct__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Correct</inlineHelpText>
    <label>C</label>
    <type>Checkbox</type>
</CustomField>