force-app/main/default/objects/Session_Obj__c/fields/Incorrect__c.field-meta.xml
<CustomField>
    <fullName>Incorrect__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Incorrect</inlineHelpText>
    <label>I</label>
    <type>Checkbox</type>
</CustomField>