force-app/main/default/objects/Session_Obj__c/fields/NonResponsive__c.field-meta.xml
<CustomField>
    <fullName>NonResponsive__c</fullName>
    <defaultValue>false</defaultValue>
    <label>N</label>
    <type>Checkbox</type>
</CustomField>