force-app/main/default/objects/Session_Obj__c/fields/Objective__c.field-meta.xml
<CustomField>
    <fullName>Objective__c</fullName>
    <label>Objective</label>
    <referenceTo>Objective__c</referenceTo>
    <relationshipLabel>Session Objectives</relationshipLabel>
    <relationshipName>Session_Objectives</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>