force-app/main/default/objects/Session_Obj__c/fields/Objective_Name__c.field-meta.xml
<CustomField>
    <fullName>Objective_Name__c</fullName>
    <formula>Objective__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Objective Name</label>
    <type>Text</type>
</CustomField>