force-app/main/default/objects/Session_Obj__c/fields/Previous_Status__c.field-meta.xml
<CustomField>
    <fullName>Previous_Status__c</fullName>
    <description>Used to capture the client&#39;s previous status on this objective at the time that the session is created.</description>
    <label>Previous Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>O</fullName>
            </value>
            <value>
                <fullName>AC</fullName>
            </value>
            <value>
                <fullName>CIP</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>