force-app/main/default/objects/Session_Obj__c/fields/Prompted__c.field-meta.xml
<CustomField>
    <fullName>Prompted__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Prompted</inlineHelpText>
    <label>P</label>
    <type>Checkbox</type>
</CustomField>