force-app/main/default/objects/Session_Obj__c/fields/SD__c.field-meta.xml
<CustomField>
    <fullName>SD__c</fullName>
    <formula>Objective__r.SD__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>SD</label>
    <type>Text</type>
</CustomField>