force-app/main/default/objects/Session_Obj__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Session__c</columns>
    <columns>Correct__c</columns>
    <columns>Prompted__c</columns>
    <columns>Incorrect__c</columns>
    <columns>Previous_Status__c</columns>
    <columns>Comment__c</columns>
    <columns>Objective_Name__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>