force-app/main/default/objects/Session_Obj__c/listViews/Session_Objectives.listView-meta.xml
<ListView>
    <fullName>Session_Objectives</fullName>
    <columns>NAME</columns>
    <columns>Objective__c</columns>
    <columns>Correct__c</columns>
    <columns>Incorrect__c</columns>
    <columns>Prompted__c</columns>
    <filterScope>Everything</filterScope>
    <label>Session Objectives</label>
</ListView>